----------
v3.3.0-git
----------

[mms] Rearrange the default order of filter rules.


------
v3.2.4
------

[mms] Fix filter drag/drop ordering working in basic view (Bug #13820).
[mms] Maildir requires UTF7-IMAP encoding for folder names (Bug #13378).


------
v3.2.3
------

[mms] Fix determination of preferred backend (Bug #13548).


------
v3.2.2
------

[mms] Fix checking the 'max_forward' permission (Bug #13568).
[mms] IMAP driver needs to explicitly search for UTF-8 text, since we don't
      restrict charset input at the UI level (Bug #13554).
[mjr] Fix issues when preferred configuration contains an array (Bug #13548).


------
v3.2.1
------

[mms] Fix performing more than one filter drag/drop action on a single page
      (Bug #13434).
[mms] Add support for a negative regex test to the Maildrop driver.
[mms] Add support for a negative regex test to the Sieve driver (Request
      #12671; Pete Beardmore <pete.beardmore@msn.com>).
[mms] Fix vacation in the maildrop driver (Bug #13415;
      balestrieri@mag-data.com).


------
v3.2.0
------

[mms] Fix mailbox selection on Spam page (Bug #13298).
[mms] Fix regression in deactivating scripts (Bug #13297).


---------
v3.2.0RC1
---------

[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-----------
v3.2.0beta2
-----------

[mms] Honor 'auto_update' preference when re-sorting filters list (Bug #13216).
[mms] Fix regression in copying a rule when storing in SQL backend (Bug
      #13213).


-----------
v3.2.0beta1
-----------

[jan] Pass current vacation addresses to hook
      (skhorde@smail.inf.fh-bonn-rhein-sieg.de, Request #13185).


------------
v3.2.0alpha1
------------

[mms] Use standardized 'enotify' sieve extension (RFC 5435) by default instead
      of deprecated 'notify' extension (Request #8784).
[mms] Use standardized 'imap4flags' sieve extension (RFC 5232) by default